     - smpi/async_small_thres        -> smpi/async_small_thresh
     - smpi/send_is_detached_thres   -> smpi/send_is_detached_thresh 

   - Removed Lua simulation bindings (switch to C or Java for that).
     Lua can still be used to describe platforms
   - Removed Java kernel plug-ins.
     Will be reintroduced after the ongoing major internals reorg.
   - In SimDag 
      - The ACCESS_MODE of SD_workstation has been removed. This feature was not really usable and should soon be 
        replaced by a more flexible mechanism.
      - The following functions thus do not exist anymore
         - SD_workstation_get_access_mode
         - SD_workstation_set_access_mode
         - SD_workstation_get_current_task
      - Basic estimation functions have been removed but can easily be replaced
        - SD_route_get_communication_time => SG_route_get_latency() + amount / SD_route_get_bandwidth()
        - SD_workstation_get_computation_time => amount / sg_host_speed()

 XML platforms:
 * Switch to platform v4 format.
   - Rename from 'power' to 'speed' the attributes describing the amount of
     flops that a <host>, <peer>, <cluster> or <cabinet> can deliver per second.
   - In <trace_connect>, attribute kind="POWER" is now kind="SPEED".
   - The DOCTYPE points to the right URL (this file):
     http://simgrid.gforge.inria.fr/simgrid/simgrid.dtd
     (the file at this address now documents the changelog since its v1)
   - A warning is emitted for unit-less values (they are still accepted).
     - speed. Default: 'f' or 'flops'. Also defined:
        'Yf',         'Zf',         'Ef',       'Pf',        'Tf',        'Gf',        'Mf',        'kf'
        'yottaflops', 'zettaflops', 'exaflops', 'petaflops', 'teraflops', 'gigaflops', 'megaflops', 'kiloflops'
     - bandwidth. Default: 'Bps' bytes per second (or 'bps' for bits but 1 Bps = 8 bps)
       Also defined in bytes: 'TiBps', 'GiBps', 'MiBps', 'KiBps', 'TBps', 'GBps', 'MBps', 'kBps', 'Bps'